======= Change History ========

--- Ver. 1.4.1 ---

- Fixed: Update italian language file (issue 174)
- Fixed again: HTTPS certificate problem (issue 151)



--- Ver. 1.4.0 ---

- New: CrashRpt is now able to capture end user's desktop and record what happened 
       just before crash to an .ogg video file and include the file to crash report. 
       The recorded information may help the software vendor to better understand 
       what actions the end user performed before client application crashed and 
       reproduce the error (issue 122). 

- New: Added new crAddVideo() function to record the desktop state to a video file 
       and add the file to crash report.

- New: Added code of Theora video codec and OGG container (libtheora and libogg).

- New: New-style crash callback replacing the obsolete LPGETLOGFILE() callback.
       Added PFNCRASHCALLBACK() callback function prototype, CR_CRASH_CALLBACK_INFO
       structure and crSetCrashCallback() function.

- New: Added an ability to continue program execution after crash. This can be performed
       through crash callback (see CR_CRASH_CALLBACK_INFO::bContinueExecution structure
       member). This partially implements feature request in issue 125.

- New: Removed deprecated constant CR_INST_ALL_EXCEPTION_HANDLERS, use CR_INST_ALL_POSSIBLE_HANDLERS
       constant instead.

- New: Removed legacy method of error report delivery as Base-64-encoded data.
       Now binary-encoded HTTP uploads are always used instead. This makes the
       constant CR_INST_HTTP_BINARY_ENCODING useless.

- Fixed: Memory Leak (or rather memory not deallocated before program exit) (issue 169)
- Fixed: Can not restart application. Use CR_INST_APP_RESTART flag (issue 165)


--- Ver. 1.3.1 ---

- New: Removed support of obsolete Visual Studio .NET 2003. 

- New: Removed deprecated functions crAddFileA(), crAddFileW(), 
       crInstallToCurrentThread(), crExceptionFilter() and deprecated 