@@ -2,6 +2,10 @@
 
 --- Ver. 1.4.1 ---
 
+
+- New: Added back the crExceptionFilter() function removed previously as deprecated. 
+       It seems that some users require that function. (issue 175).
+
 - Fixed: Update italian language file (issue 174)
 - Fixed again: HTTPS certificate problem (issue 151)
 
